--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,9 @@
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
   %body
+
+    -flash.each do |name, msg|
+      =content_tag :div, msg, class: name
     -if user_signed_in?
       =link_to "Sign Out", destroy_user_session_path, method: :delete
     -elsif admin_signed_in?
