--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,6 +18,87 @@
     = javascript_include_tag "vendor/custom.modernizr"
     = csrf_meta_tags
   %body
+    .row
+      .large-12.columns
+        =render "header_nav"
+        .row
+          / Side Bar
+          .large-4.small-12.columns
+            %img{src: "http://placehold.it/500x500&text=Logo"}/
+            .hide-for-small.panel
+              %h3 Header
+              %h5.subheader
+                Risus ligula, aliquam nec fermentum vitae, sollicitudin eget urna. Donec dignissim nibh fermentum odio ornare sagittis.
+            %a{href: "#"}
+              .panel.callout.radius
+                %h6 99  items in your cart
+          / End Side Bar
+          / Thumbnails
+          .large-8.columns
+            .row
+              .large-4.small-6.columns
+                %img{src: "http://placehold.it/1000x1000&text=Thumbnail"}/
+                .panel
+                  %h5 Item Name
+                  %h6.subheader $000.00
+              .large-4.small-6.columns
+                %img{src: "http://placehold.it/500x500&text=Thumbnail"}/
+                .panel
+                  %h5 Item Name
+                  %h6.subheader $000.00
+              .large-4.small-6.columns
+                %img{src: "http://placehold.it/500x500&text=Thumbnail"}/
+                .panel
+                  %h5 Item Name
+                  %h6.subheader $000.00
+              .large-4.small-6.columns
+                %img{src: "http://placehold.it/500x500&text=Thumbnail"}/
+                .panel
+                  %h5 Item Name
+                  %h6.subheader $000.00
+              .large-4.small-6.columns
+                %img{src: "http://placehold.it/500x500&text=Thumbnail"}/
+                .panel
+                  %h5 Item Name
+                  %h6.subheader $000.00
+              .large-4.small-6.columns
+                %img{src: "http://placehold.it/500x500&text=Thumbnail"}/
+                .panel
+                  %h5 Item Name
+                  %h6.subheader $000.00
+            / End Thumbnails
+            / Managed By
+            .row
+              .large-12.columns
+                .panel
+                  .row
+                    .large-2.small-6.columns
+                      %img{src: "http://placehold.it/300x300&text=Site Owner"}/
+                    .large-10.small-6.columns
+                      %strong
+                        This Site Is Managed By
+                        %hr/
+                      Risus ligula, aliquam nec fermentum vitae, sollicitudin eget urna. Donec dignissim nibh fermentum odio ornare sagittis
+              / End Managed By
+        / Footer
+        %footer.row
+          .large-12.columns
+            %hr/
+            .row
+              .large-6.columns
+                %p © Copyright no one at all. Go to town.
+              .large-6.columns
+                %ul.inline-list.right
+                  %li
+                    %a{href: "#"} Link 1
+                  %li
+                    %a{href: "#"} Link 2
+                  %li
+                    %a{href: "#"} Link 3
+                  %li
+                    %a{href: "#"} Link 4
+        / End Footer
+
 
     %div.row
       -flash.each do |name, msg|
