--- a/app/views/shared/_header_nav.html.haml
+++ b/app/views/shared/_header_nav.html.haml
@@ -1,18 +1,15 @@
-/ Navigation
 .row
   .large-12.columns
     %nav.top-bar
       %ul.title-area
-        / Title Area
         %li.name
-          %h1
+          %h1.branding-shit
             %a{href: "#"}
-              Top Bar Title
+              Activitate
         %li.toggle-topbar.menu-icon
           %a{href: "#"}
             %span menu
       %section.top-bar-section
-        / Right Nav Section
         %ul.right
           %li.divider
           %li.has-dropdown
@@ -67,5 +64,3 @@
               %li.divider
               %li
                 %a{href: "#"} See all →
-    / End Top Bar
-/ End Navigation
