--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -5,6 +5,7 @@
   / Set the viewport width to device width for mobile
   %meta{content: "width=device-width, initial-scale=1.0", name: "viewport"}/
   %title= content_for?(:title) ? yield(:title) : "Bits App"
+  %link{href: 'http://fonts.googleapis.com/css?family=Autour+One', rel:'stylesheet', type:'text/css'}
   = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
   = javascript_include_tag "application", "data-turbolinks-track" => true
   = javascript_include_tag "vendor/custom.modernizr"
