--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -7,5 +7,5 @@
       Risus ligula, aliquam nec fermentum vitae, sollicitudin eget urna. Donec dignissim nibh fermentum odio ornare sagittis.
   %a{href: "#"}
     .panel.callout.radius
-      %h6 99  items in your cart
+      %h6= activities_count
 / End Side Bar
